# stroer-task

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
stroer_coding_challenge/: manage.py
stroer_coding_challenge/fakeapi/: admin.py  apps.py  models.py  urls.py  views.py
stroer_coding_challenge/fakeapi/management/commands/: import_data_from_api.py  setup_testing_user.py  sync_with_fake_system.py
stroer_coding_challenge/fakeapi/migrations/: 0001_initial.py
stroer_coding_challenge/fakeapi/serializers/: comment_serializer.py  comment_serializer_user.py  post_serializer.py  post_serializer_user.py
stroer_coding_challenge/fakeapi/tests/: test_models.py  test_views.py
stroer_coding_challenge/stroer_coding_challenge/: asgi.py  settings.py  urls.py  wsgi.py
